feat: type the inputs and propagate through formulas
Each hardcoded cell takes a kind and a scale from its own row label; the
formulas then carry that forward by dimensional arithmetic to a fixpoint.
Quantity times rate is money, money over money is a ratio, money divided by
100,000 is money in lakhs, and a sum requires its members to agree on both kind
and scale. Still nothing binds from this.

Disagreement is refused, never resolved: a kind or scale conflict, a chain
through a #REF! or another workbook, a reference cycle, or a number no label
names all end as an explicit reason. A bare unlabelled cell is no longer
assumed to be money, which is how a dimensionless power factor came to be read
as a cost.

Units belong to the group, not the cell, so each aggregation resolves its unit
once from its members and a group whose members disagree resolves to nothing.

The graph and its typing keep insertion order rather than Map.copyOf, whose
randomised iteration made two runs over one workbook disagree.

Measured on Project Docs/OM Arham Ventures.xlsx: 5,720 of 8,791 numeric cells
type from 2,633 inputs, 1,898 of 3,002 aggregations resolve as money, and every
numeric cell ends with either a unit or a reason.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>